# blacktape

./: .codecov.yml  .gitignore  .pylintrc  README.md  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  tox.ini
.github/workflows/: test_suite.yml
blacktape/: cli.py  db.py  lib.py  models.py  pipeline.py  util.py
notebooks/: chunking.ipynb  chunking_pipeline.ipynb  demo.ipynb  end_to_end.ipynb  matching.ipynb  pii_patterns.ipynb  pipeline.ipynb
tests/: conftest.py  test_cli.py  test_lib.py
tests/data/: birds_and_bees.txt  mock_pii.csv  newport_bermuda.txt  sample.txt
