[metadata]
name = blacktape
summary = Python library and supporting utilities to automate redaction of text files
description-file = README.md
description-content-type = text/markdown
url = https://github.com/carascap/blacktape
author = CARASCAP
author-email = carascap@protonmail.com
license = MIT
requires-python = >=3.7
classifier =
    Development Status :: 2 - Pre-Alpha

[files]
packages = blacktape

[entry_points]
console_scripts =
    blacktape = blacktape.cli:main_command
